hphp/test/zend/bad/ext-gd/imagestring_error7.php
<?php
$image = imagecreatetruecolor(180, 30);
$result = imagestring($image, 1, 5, 5, 'String', 'font');

?>